snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha256
e606a9e9c1bbc0422cf13f9f19d75e4db661a11ada2f60e670318a6a1517186f